# spoken-api

./: .dockerignore  .env.prod.example  Dockerfile  README.md  docker-compose.prod.yml  host-spoken.md  hosting-spoken-on-digitalocean.md  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 5421608b7a60_change_auth_token_ids_to_uuid.py
app/: main.py
app/core/: api_docs.md  config.py  exception_handlers.py
app/db/: api_docs.md
app/external_services/cloudinary/: api_docs.md
app/external_services/deepgram/: api_docs.md
app/external_services/deepl/: api_docs.md
app/external_services/openai_tts/: api_docs.md
app/external_services/voiceai/: api_docs.md
app/kafka/: api_docs.md  consumer.py  manager.py
app/models/: api_docs.md
app/modules/auth/: api_docs.md  models.py
app/modules/meeting/: api_docs.md  repository.py  router.py  schemas.py  service.py  state.py  ws_dependencies.py  ws_router.py
app/modules/user/: api_docs.md
app/routers/: api_docs.md
app/schemas/: api_docs.md
app/services/: api_docs.md  stt_worker.py  translation_worker.py  tts_worker.py
tests/meeting/: test_meeting_router.py  test_meeting_service.py  test_ws.py  test_ws_router.py
